y.output

state 0
	$accept: .root $end 
	root: .    (1)

	WEEKDAY  shift 10
	ALWAYS  shift 7
	'0'  shift 15
	'1'  shift 16
	'2'  shift 17
	'3'  shift 18
	'4'  shift 19
	'5'  shift 20
	'6'  shift 21
	'7'  shift 22
	'8'  shift 23
	'9'  shift 24
	.  reduce 1 (src line 69)

	time  goto 11
	hour  goto 12
	DIGIT  goto 14
	NUM  goto 13
	ws  goto 8
	weekdays  goto 5
	timespan  goto 9
	timespans  goto 6
	always  goto 4
	selector  goto 3
	selectors  goto 2
	root  goto 1

state 1
	$accept:  root.$end 

	$end  accept
	.  error


state 2
	root:  selectors.    (2)

	.  reduce 2 (src line 70)


state 3
	selectors:  selector.selector_seq 
	selector_seq: .    (4)

	';'  shift 26
	.  reduce 4 (src line 83)

	selector_seq  goto 25

state 4
	selector:  always.    (6)

	.  reduce 6 (src line 90)


state 5
	selector:  weekdays.' ' timespans 

	' '  shift 27
	.  error


state 6
	selector:  timespans.    (8)

	.  reduce 8 (src line 96)


state 7
	always:  ALWAYS.    (9)

	.  reduce 9 (src line 99)


state 8
	weekdays:  ws.weekdays_seq 
	weekdays_seq: .    (13)

	','  shift 29
	.  reduce 13 (src line 125)

	weekdays_seq  goto 28

state 9
	timespans:  timespan.timespans_seq 
	timespans_seq: .    (16)

	','  shift 31
	.  reduce 16 (src line 139)

	timespans_seq  goto 30

state 10
	ws:  WEEKDAY.    (11)
	ws:  WEEKDAY.'-' WEEKDAY 

	'-'  shift 32
	.  reduce 11 (src line 108)


state 11
	timespan:  time.'-' time 

	'-'  shift 33
	.  error


state 12
	time:  hour.':' minute 

	':'  shift 34
	.  error


state 13
	hour:  NUM.    (20)

	.  reduce 20 (src line 165)


state 14
	NUM:  DIGIT.DIGIT 

	'0'  shift 15
	'1'  shift 16
	'2'  shift 17
	'3'  shift 18
	'4'  shift 19
	'5'  shift 20
	'6'  shift 21
	'7'  shift 22
	'8'  shift 23
	'9'  shift 24
	.  error

	DIGIT  goto 35

state 15
	DIGIT:  '0'.    (23)

	.  reduce 23 (src line 187)


state 16
	DIGIT:  '1'.    (24)

	.  reduce 24 (src line 187)


state 17
	DIGIT:  '2'.    (25)

	.  reduce 25 (src line 187)


state 18
	DIGIT:  '3'.    (26)

	.  reduce 26 (src line 188)


state 19
	DIGIT:  '4'.    (27)

	.  reduce 27 (src line 188)


state 20
	DIGIT:  '5'.    (28)

	.  reduce 28 (src line 188)


state 21
	DIGIT:  '6'.    (29)

	.  reduce 29 (src line 189)


state 22
	DIGIT:  '7'.    (30)

	.  reduce 30 (src line 189)


state 23
	DIGIT:  '8'.    (31)

	.  reduce 31 (src line 189)


state 24
	DIGIT:  '9'.    (32)

	.  reduce 32 (src line 189)


state 25
	selectors:  selector selector_seq.    (3)

	.  reduce 3 (src line 80)


state 26
	selector_seq:  ';'.selectors 

	WEEKDAY  shift 10
	ALWAYS  shift 7
	'0'  shift 15
	'1'  shift 16
	'2'  shift 17
	'3'  shift 18
	'4'  shift 19
	'5'  shift 20
	'6'  shift 21
	'7'  shift 22
	'8'  shift 23
	'9'  shift 24
	.  error

	time  goto 11
	hour  goto 12
	DIGIT  goto 14
	NUM  goto 13
	ws  goto 8
	weekdays  goto 5
	timespan  goto 9
	timespans  goto 6
	always  goto 4
	selector  goto 3
	selectors  goto 36

state 27
	selector:  weekdays ' '.timespans 

	'0'  shift 15
	'1'  shift 16
	'2'  shift 17
	'3'  shift 18
	'4'  shift 19
	'5'  shift 20
	'6'  shift 21
	'7'  shift 22
	'8'  shift 23
	'9'  shift 24
	.  error

	time  goto 11
	hour  goto 12
	DIGIT  goto 14
	NUM  goto 13
	timespan  goto 9
	timespans  goto 37

state 28
	weekdays:  ws weekdays_seq.    (10)

	.  reduce 10 (src line 102)


state 29
	weekdays_seq:  ','.weekdays 

	WEEKDAY  shift 10
	.  error

	ws  goto 8
	weekdays  goto 38

state 30
	timespans:  timespan timespans_seq.    (15)

	.  reduce 15 (src line 136)


state 31
	timespans_seq:  ','.timespans 

	'0'  shift 15
	'1'  shift 16
	'2'  shift 17
	'3'  shift 18
	'4'  shift 19
	'5'  shift 20
	'6'  shift 21
	'7'  shift 22
	'8'  shift 23
	'9'  shift 24
	.  error

	time  goto 11
	hour  goto 12
	DIGIT  goto 14
	NUM  goto 13
	timespan  goto 9
	timespans  goto 39

state 32
	ws:  WEEKDAY '-'.WEEKDAY 

	WEEKDAY  shift 40
	.  error


state 33
	timespan:  time '-'.time 

	'0'  shift 15
	'1'  shift 16
	'2'  shift 17
	'3'  shift 18
	'4'  shift 19
	'5'  shift 20
	'6'  shift 21
	'7'  shift 22
	'8'  shift 23
	'9'  shift 24
	.  error

	time  goto 41
	hour  goto 12
	DIGIT  goto 14
	NUM  goto 13

state 34
	time:  hour ':'.minute 

	'0'  shift 15
	'1'  shift 16
	'2'  shift 17
	'3'  shift 18
	'4'  shift 19
	'5'  shift 20
	'6'  shift 21
	'7'  shift 22
	'8'  shift 23
	'9'  shift 24
	.  error

	minute  goto 42
	DIGIT  goto 14
	NUM  goto 43

state 35
	NUM:  DIGIT DIGIT.    (22)

	.  reduce 22 (src line 183)


state 36
	selector_seq:  ';' selectors.    (5)

	.  reduce 5 (src line 85)


state 37
	selector:  weekdays ' ' timespans.    (7)

	.  reduce 7 (src line 91)


state 38
	weekdays_seq:  ',' weekdays.    (14)

	.  reduce 14 (src line 129)


state 39
	timespans_seq:  ',' timespans.    (17)

	.  reduce 17 (src line 140)


state 40
	ws:  WEEKDAY '-' WEEKDAY.    (12)

	.  reduce 12 (src line 112)


state 41
	timespan:  time '-' time.    (18)

	.  reduce 18 (src line 144)


state 42
	time:  hour ':' minute.    (19)

	.  reduce 19 (src line 155)


state 43
	minute:  NUM.    (21)

	.  reduce 21 (src line 174)


20 terminals, 17 nonterminals
33 grammar rules, 44/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
66 working sets used
memory: parser 54/30000
28 extra closures
83 shift entries, 1 exceptions
23 goto entries
25 entries saved by goto default
Optimizer space used: output 54/30000
54 table entries, 0 zero
maximum spread: 20, maximum offset: 34
